--- a/pom.xml
+++ b/pom.xml
@@ -191,6 +191,18 @@
 					</excludes>
 				</configuration>
 			</plugin>
+		<plugin>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+        <reportSets>
+          <reportSet>
+            <reports>
+              <!-- select non-aggregate reports -->
+              <report>report</report>
+            </reports>
+          </reportSet>
+        </reportSets>
+      </plugin>
 
         </plugins>
 		<finalName>addressbook</finalName>
