--- a/pom.xml
+++ b/pom.xml
@@ -143,6 +143,7 @@
                 </dependency>
                 <dependency>
                         <groupId>org.codehaus.jackson</groupId>
+                    
                         <artifactId>jackson-jaxrs</artifactId>
                         <version>1.9.4</version>
                 </dependency>
@@ -168,6 +169,11 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
+            <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>cobertura-maven-plugin</artifactId>
+          <version>2.7</version>
+        </plugin>
                 <plugin>
     <groupId>org.jacoco</groupId>
     <artifactId>jacoco-maven-plugin</artifactId>
@@ -218,6 +224,11 @@
           
     <reporting>
     <plugins>
+        <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>cobertura-maven-plugin</artifactId>
+        <version>2.7</version>
+      </plugin>
          <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-report-plugin</artifactId>
